created header and promo sections, add adaptived style for this blocks

--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,63 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
+    <header class="header center">
+        <div class="header__left">
+            <a href="index.html" class="header__logo"><img src="icons/logo.png" alt="logo"></a>
+            <a href="##" class="header__search"><img src="icons/search.png" alt="search"></a>
+        </div>
+        <div class="header__rigth">
+            <div class="header__menu">
+                <span class="header__menu-span"></span>
+                <span class="header__menu-span"></span>
+                <span class="header__menu-span"></span>
+            </div>
+            <!-- <ul class="menu">
+                <button class="menu__close"></button>
+                <li class="menu__list_title">MAN</li>
+                <li class="menu__list"><a href="#" class="menu__link">Accessories</a></li>
+                <li class="menu__list"><a href="#" class="menu__link">Bags</a></li>
+                <li class="menu__list"><a href="#" class="menu__link">Denim</a></li>
+                <li class="menu__list"><a href="#" class="menu__link">T-Shirts</a></li>
+                <li class="menu__list">WOMAN</li>
+                <li class="menu__list"><a href="#" class="menu__link">Accessories</a></li>
+                <li class="menu__list"><a href="#" class="menu__link">Jackets & Coats</a></li>
+                <li class="menu__list"><a href="#" class="menu__link">Polos</a></li>
+                <li class="menu__list"><a href="#" class="menu__link">T-Shirts</a></li>
+                <li class="menu__list"><a href="#" class="menu__link">Shirts</a></li>
+                <li class="menu__list">KIDS</li>
+                <li class="menu__list"><a href="#" class="menu__link">Accessories</a></li>
+                <li class="menu__list"><a href="#" class="menu__link">Jackets & Coats</a></li>
+                <li class="menu__list"><a href="#" class="menu__link">Polos</a></li>
+                <li class="menu__list"><a href="#" class="menu__link">T-Shirts</a></li>
+                <li class="menu__list"><a href="#" class="menu__link">Shirts</a></li>
+                <li class="menu__list"><a href="#" class="menu__link">Bags</a></li>
+            </ul> -->
+            <a href="registration.html" class="header__reg"><img src="icons/reg.png" alt="registration"></a>
+            <a href="" class="header__cart"><img src="icons/cart.png" alt="cart"></a>
+        </div>
+    </header>
+    <section class="promo">
+        <div class="promo__wrap">
+            <div class="promo__left"></div>
+            <div class="promo__right">
+                <div class="promo__title-wrap">
+                    <h1 class="promo__heading promo__heading_big">THE BRAND</h1>
+                    <h1 class="promo__heading">OF LUXERIOUS <span>FASHION</span></h1>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 
 </body>
 
