created category section, added animation for him. Added dropped menu.

--- a/src/index.html
+++ b/src/index.html
@@ -25,27 +25,6 @@
                 <span class="header__menu-span"></span>
                 <span class="header__menu-span"></span>
             </div>
-            <!-- <ul class="menu">
-                <button class="menu__close"></button>
-                <li class="menu__list_title">MAN</li>
-                <li class="menu__list"><a href="#" class="menu__link">Accessories</a></li>
-                <li class="menu__list"><a href="#" class="menu__link">Bags</a></li>
-                <li class="menu__list"><a href="#" class="menu__link">Denim</a></li>
-                <li class="menu__list"><a href="#" class="menu__link">T-Shirts</a></li>
-                <li class="menu__list">WOMAN</li>
-                <li class="menu__list"><a href="#" class="menu__link">Accessories</a></li>
-                <li class="menu__list"><a href="#" class="menu__link">Jackets & Coats</a></li>
-                <li class="menu__list"><a href="#" class="menu__link">Polos</a></li>
-                <li class="menu__list"><a href="#" class="menu__link">T-Shirts</a></li>
-                <li class="menu__list"><a href="#" class="menu__link">Shirts</a></li>
-                <li class="menu__list">KIDS</li>
-                <li class="menu__list"><a href="#" class="menu__link">Accessories</a></li>
-                <li class="menu__list"><a href="#" class="menu__link">Jackets & Coats</a></li>
-                <li class="menu__list"><a href="#" class="menu__link">Polos</a></li>
-                <li class="menu__list"><a href="#" class="menu__link">T-Shirts</a></li>
-                <li class="menu__list"><a href="#" class="menu__link">Shirts</a></li>
-                <li class="menu__list"><a href="#" class="menu__link">Bags</a></li>
-            </ul> -->
             <a href="registration.html" class="header__reg"><img src="icons/reg.png" alt="registration"></a>
             <a href="" class="header__cart"><img src="icons/cart.png" alt="cart"></a>
         </div>
@@ -59,11 +38,52 @@
                     <h1 class="promo__heading">OF LUXERIOUS <span>FASHION</span></h1>
                 </div>
             </div>
+            <div class="promo__dark">
+                <ul class="menu">
+                    <button class="menu__close">x</button>
+                    <h3 class="menu__title">Menu</h3>
+                    <li class="menu__list">MAN</li>
+                    <li><a href="#" class="menu__link">Accessories</a></li>
+                    <li><a href="#" class="menu__link">Bags</a></li>
+                    <li><a href="#" class="menu__link">Denim</a></li>
+                    <li><a href="#" class="menu__link">T-Shirts</a></li>
+                    <li class="menu__list">WOMAN</li>
+                    <li><a href="#" class="menu__link">Accessories</a></li>
+                    <li><a href="#" class="menu__link">Jackets & Coats</a></li>
+                    <li><a href="#" class="menu__link">Polos</a></li>
+                    <li><a href="#" class="menu__link">T-Shirts</a></li>
+                    <li><a href="#" class="menu__link">Shirts</a></li>
+                    <li class="menu__list">KIDS</li>
+                    <li><a href="#" class="menu__link">Accessories</a></li>
+                    <li><a href="#" class="menu__link">Jackets & Coats</a></li>
+                    <li><a href="#" class="menu__link">Polos</a></li>
+                    <li><a href="#" class="menu__link">T-Shirts</a></li>
+                    <li><a href="#" class="menu__link">Shirts</a></li>
+                    <li><a href="#" class="menu__link">Bags</a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section class="categories center">
+        <div class="categories__item_1 categories__item">
+            <h3 class="categories__title">30% OFF
+                <span>FOR WOMEN</span></h3>
+        </div>
+        <div class="categories__item_2 categories__item">
+            <h3 class="categories__title">HOT DEAL
+                <span>FOR MEN</span></h3>
+        </div>
+        <div class="categories__item_3 categories__item">
+            <h3 class="categories__title">NEW ARRIVALS
+                <span>FOR KIDS</span></h3>
+        </div>
+        <div class="categories__item_4 categories__item">
+            <h3 class="categories__title">LUXIROUS & TRENDY
+                <span>ACCESORIES</span></h3>
         </div>
     </section>
 
-
-
+    <script src="js/menu.js"></script>
 </body>
 
 </html>
