--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <header class="header center">
         <div class="header__left">
             <a href="index.html" class="header__logo"><img src="icons/logo.png" alt="logo"></a>
-            <a href="##" class="header__search"><img src="icons/search.png" alt="search"></a>
+            <a href="#" class="header__search"><img src="icons/search.png" alt="search"></a>
         </div>
         <div class="header__rigth">
             <div class="header__menu">
@@ -40,8 +40,8 @@
             </div>
             <div class="promo__dark">
                 <ul class="menu">
-                    <button class="menu__close">x</button>
-                    <h3 class="menu__title">Menu</h3>
+                    <li class="menu__close">x</li>
+                    <li class="menu__title">Menu</li>
                     <li class="menu__list">MAN</li>
                     <li><a href="#" class="menu__link">Accessories</a></li>
                     <li><a href="#" class="menu__link">Bags</a></li>
@@ -82,6 +82,82 @@
                 <span>ACCESORIES</span></h3>
         </div>
     </section>
+    <section class="products center">
+        <header class="products__header">
+            <h3 class="products__title">Fetured Items</h3>
+            <p class="products__desc">Shop for items based on what we featured in this week</p>
+        </header>
+        <div class="products__wrap">
+            <div class="product">
+                <div class="product__img-block">
+                    <img src="img/product_1.jpg" alt="men">
+                </div>
+                <div class="product__info">
+                    <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
+                    <p class="product__descr">Known for her sculptural takes on traditional tailoring, Australian
+                        arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <div class="product__price">$52.00</div>
+                </div>
+            </div>
+            <div class="product">
+                <div class="product__img-block">
+                    <img src="img/product_2.jpg" alt="men">
+                </div>
+                <div class="product__info">
+                    <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
+                    <p class="product__descr">Known for her sculptural takes on traditional tailoring, Australian
+                        arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <div class="product__price">$52.00</div>
+                </div>
+            </div>
+            <div class="product">
+                <div class="product__img-block">
+                    <img src="img/product_3.jpg" alt="men">
+                </div>
+                <div class="product__info">
+                    <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
+                    <p class="product__descr">Known for her sculptural takes on traditional tailoring, Australian
+                        arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <div class="product__price">$52.00</div>
+                </div>
+            </div>
+            <div class="product">
+                <div class="product__img-block">
+                    <img src="img/product_4.jpg" alt="men">
+                </div>
+                <div class="product__info">
+                    <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
+                    <p class="product__descr">Known for her sculptural takes on traditional tailoring, Australian
+                        arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <div class="product__price">$52.00</div>
+                </div>
+            </div>
+            <div class="product">
+                <div class="product__img-block">
+                    <img src="img/product_5.jpg" alt="men">
+                </div>
+                <div class="product__info">
+                    <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
+                    <p class="product__descr">Known for her sculptural takes on traditional tailoring, Australian
+                        arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <div class="product__price">$52.00</div>
+                </div>
+            </div>
+            <div class="product">
+                <div class="product__img-block">
+                    <img src="img/product_6.jpg" alt="men">
+                </div>
+                <div class="product__info">
+                    <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
+                    <p class="product__descr">Known for her sculptural takes on traditional tailoring, Australian
+                        arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <div class="product__price">$52.00</div>
+                </div>
+            </div>
+        </div>
+        <button class="products__button">Browse All Product</button>
+    </section>
+
 
     <script src="js/menu.js"></script>
 </body>
